# Auto_Analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
sample_data/: sample.csv
src/auto_analysis/: __init__.py  agent.py  cli.py  contracts.py
tests/: test_contracts.py
